# RaspVan

./: .env  .env.sample  .gitignore  .pdm-python  .pre-commit-config.yaml  Makefile  README.md  README_deprecated.md  docker-compose.yml  http_server.py  phiona_server.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tasks.py
ASR/: .env  README.md  adapt_lm.sh  convert_to_wav.sh  prepare_lm_data.sh  train_lm.sh
ASR/client/: asr_client.py
ASR/data/lm/: .gitignore
ASR/src/: __init__.py  adapt.py  kaldi_adapt.py  misc.py
ASR/src/templates/: README.md  kaldi-model-dist.sh  kaldi-run-adaptation.sh
MAI/scripts/: bootstrap_mai.sh  bootstrap_nlu.sh  eval_dialogue.sh  interactive_dialogue_train.sh  launch_dialogue_server.sh  launch_nlu_server.sh  launch_response_server.sh  set_mai_env_variables.sh
asr/: .gitignore  README.md  __init__.py  __main__.py  audio.py  client.py  download_models.sh  listen_asr_vad.py  mic_vad_streaming.py  requirements.txt  run.sh  run_mic_stream.sh  vad.py  webrtcvad.py
common/: __init__.py  vad.py
common/utils/: context.py  decorators.py  exec.py  io.py  rabbit.py
config/: .asoundrc
hotword/: .gitignore  README.md  __main__.py  download_binaries.sh  requirements.txt  run.py
hotword/fiona-all-2024-12-26/: fiona.net
hotword/fiona-all-2024-12-26/fiona.logs/: events.out.tfevents.1735228585.fedora  events.out.tfevents.1735228881.fedora  events.out.tfevents.1735229082.fedora  events.out.tfevents.1735229084.fedora  events.out.tfevents.1735229085.fedora  events.out.tfevents.1735229088.fedora  events.out.tfevents.1735229091.fedora  events.out.tfevents.1735229092.fedora  events.out.tfevents.1735229093.fedora  events.out.tfevents.1735229094.fedora  events.out.tfevents.1735229095.fedora  events.out.tfevents.1735229097.fedora  events.out.tfevents.1735229098.fedora  events.out.tfevents.1735229099.fedora  events.out.tfevents.1735229100.fedora  events.out.tfevents.1735229101.fedora  events.out.tfevents.1735229102.fedora  events.out.tfevents.1735229103.fedora  events.out.tfevents.1735229104.fedora  events.out.tfevents.1735229105.fedora  events.out.tfevents.1735229108.fedora  events.out.tfevents.1735229138.fedora  events.out.tfevents.1735229140.fedora  events.out.tfevents.1735229141.fedora  events.out.tfevents.1735229165.fedora  events.out.tfevents.1735229173.fedora  events.out.tfevents.1735229183.fedora  events.out.tfevents.1735229184.fedora  events.out.tfevents.1735229220.fedora  events.out.tfevents.1735229221.fedora  events.out.tfevents.1735229235.fedora  events.out.tfevents.1735229236.fedora  events.out.tfevents.1735229237.fedora  events.out.tfevents.1735229238.fedora  events.out.tfevents.1735229239.fedora  events.out.tfevents.1735229240.fedora  events.out.tfevents.1735229241.fedora  events.out.tfevents.1735229242.fedora  events.out.tfevents.1735229244.fedora  events.out.tfevents.1735229296.fedora  (+3 more)
hotword/models/: phiona-om.net  phiona.net
hotword/models/fiona/: fiona.net  fiona.pb  fiona.pbtxt  fiona.trained.txt
hotword/models/fiona/fiona.logs/: events.out.tfevents.1637262028.jose-N501VW  events.out.tfevents.1637262219.jose-N501VW  events.out.tfevents.1637262234.jose-N501VW  events.out.tfevents.1637262249.jose-N501VW  events.out.tfevents.1637262401.jose-N501VW  events.out.tfevents.1637262433.jose-N501VW  events.out.tfevents.1637262436.jose-N501VW  events.out.tfevents.1637262930.jose-N501VW
hotword/models/phiona/: phiona.net  phiona.pb  phiona.pbtxt
hotword/models/phiona/phiona-om.logs/: events.out.tfevents.1587925546.jose-N501VW
hotword/models/phiona/phiona.logs/: events.out.tfevents.1587923578.jose-N501VW  events.out.tfevents.1636666758.jose-N501VW  events.out.tfevents.1636666789.jose-N501VW  events.out.tfevents.1636666826.jose-N501VW  events.out.tfevents.1636666828.jose-N501VW  events.out.tfevents.1636666993.jose-N501VW  events.out.tfevents.1636666994.jose-N501VW
hotword/scripts/: create_dirs.sh  download_binaries.sh  test_listen.py  train_test_random_sample.py
nlu/: .dockerignore  Dockerfile  README.md  __init__.py  __main__.py  entity_extractor.py  intent_clf.py  numpy_build.Dockerfile  requirements.txt  server.py  spacy.Dockerfile  train.py  training.py
nlu/data/: original-and-synthetic-at-2024-12-18.csv  original_and_synthetic.csv
nlu/dockerfiles/: Dockerfile  spacy.Dockerfile
nlu/models/: entity-tagger.pkl  intent-clf.pkl  intent-le.pkl
nlu/models/new/: entity-tagger.pkl  intent-clf.pkl  intent-le.pkl
nlu/modules/: entity_extractor.py  intent_clf.py
nlu/samples/: fiona-nlu-at-2022-04-27-13-12.csv
nlu/scripts/: train.py
old/voice_assistant/: README.md
phiona/: http_server.py
phiona/utils/: __init__.py
raspvan/: __init__.py  __main__.py  ble_server.py  constants.py
raspvan/workers/: asr.py  hotword.py  nlu.py  relay.py  scheduler.py
respeaker/: __main__.py  constants.py  get_audio_device_index.py  pixels.py  record.py  requirements.txt
respeaker/led/: alexa_led_pattern.py  apa102.py  google_home_led_pattern.py
scripts/: asr_ws_client.py  asr_ws_mic_client.py  ble_client.py  bootstrap_dialogue.sh  build_actions_docker.sh  convert_asset_audio_files.sh  eval_nlu.sh  inflate_data.sh  install_miniconda.sh  launch_action_server.sh  launch_mai_server.sh  listen_rabbit.py  mic_vad_record.py  pseudo_wav_pipeline.sh  send-asr-task.py  setup.sh  setup_pi.sh  stt_wav.py  visualize_dialogues.sh  wav_pipeline.py  wav_to_text.py
src/: __init__.py  http_server.py
src/utils/: decorators.py  exec.py  io.py
src/workers/: asr.py  hotword.py
tests/: test_streams.py
voice_assistant/: requirements.txt  run_voice_assistant.sh  voice_action_server.py  voice_ctrl.py
