# pytest pycodestyle configuration
[pytest]
# Function starting with the following pattern are considered for test cases.
python_functions=test_

[ruff]
line-length = 88
output-format = "grouped"
target-version = "py37"
ignore = ["B008", "TRY003"]
select =
    # see https://docs.astral.sh/ruff/rules/
    "E4", "E7", "E9",  # basic pycodestyle rules
    "W",     # pycodestyle warnings
    "F",     # Pyflakes rules
    "N",     # PEP8 naming conventions
    "PLR",   # Pylint refactoring recommendations
    "PTH",   # recommends to use pathlib instead of os.path
    "UP",    # pyupgrade suggestions
    "BLE",   # locates blind exception capture
    "B",     # locates possible bugs and design problems
    "A",     # locates shadowing of builtin names
    "C4",    # locates possible issues with comprehensions
    "PIE",   # miscellaneous linting rules
    "DTZ",   # locates incorrect use of timezone information
    "TRY",   # locates potential exception handling antipatterns
    "PERF",  # locates potential performance issues
    "RUF",   # various Ruff-specific linting rules


[isort]
profile = black
line_length = 88
filter_files = true
force_alphabetical_sort_within_sections = true

[mypy]
mypy_path = ""
files = ["asr/", "hotword/", "nlu/", "raspvan", "respeaker"]
ignore_missing_imports = true
warn_unused_ignores = true

[metadata]
name = RaspVan
description_file = README.md
license_file = LICENSE.txt
